# Machine-Learning-Project

./: DaiabetesPrediction.ipynb  House Price Prediction  House price prediction.ipynb  Iris_classification.ipynb  LoanApproval.ipynb  MLMODEL.ipynb  PassFail.ipynb  Plant_Leaf_Disease_Detection.ipynb  README.md  StudentScore.ipynb  app.py  model.pkl  predictSalary.ipynb  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
