[tool.poetry]
name = "uber-data-prediction"
version = "0.1.0"
description = "This project is about predicting the price"
authors = ["Mohan Balaji B <mohanbalajibk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
ipykernel = "^6.29.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
flask = "^3.0.3"
scikit-learn = "^1.5.0"
notebook = "^7.2.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
